[ECO-2832] Fix scrollbar corner styling (#600)

--- a/src/typescript/frontend/src/app/global.css
+++ b/src/typescript/frontend/src/app/global.css
@@ -27,6 +27,26 @@
   --error: #f3263e;
 }
 
+::-webkit-scrollbar {
+  width: 14px;
+  height: 14px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  box-shadow: inset 0 0 0 4px var(--ec-blue);
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 1);
+}
+
+::-webkit-scrollbar-corner {
+  background-color: rgba(0, 0, 0, 1);
+}
+
 .med-pixel-text {
   font-size: 20px !important;
   line-height: 25px;
